# antiragging-backend

./: ().py  .gitignore  README.md  add_colleges.py  build.sh  manage.py  pyproject.toml  requirements.txt  test_email.py
antiragging/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_branch_alter_news_options_and_more.py  0003_complaint_is_anonymous.py
core/utils/: email_utils.py
